work out the bugs

--- a/hw24-webServer/homework/src/main/resources/templates/addClient.html
+++ b/hw24-webServer/homework/src/main/resources/templates/addClient.html
@@ -18,6 +18,10 @@
         </style>
         <div>Name:</div>
         <input class="edit" type="text" name="name"><br/>
+        <div>Address:</div>
+        <input class="edit" type="text" name="address"><br/>
+        <div>Phone:</div>
+        <input class="edit" type="text" name="phone"><br/>
         <input class="edit" type="submit" value="submit"/>
     </form>
 </div>
